# hybrid-iterative-method

./: README.md
cpp/: CMakeLists.txt  cln.cpp  cln.hpp  gen_data.cpp  gen_data.hpp  hybrid_solver.cpp  hybrid_solver.hpp  main.cpp  test.hpp
python/: gen_data_1d_poisson.py  gen_data_2d_poisson.py  gen_data_2d_poisson_boundary.py  him.py  main_1d.py  main_2d.py  main_2d_boundary.py  postprocessing_1d.py  postprocessing_2d.py  postprocessing_2d_boundary.py  py2cpp.py
